syntax = "proto3";
import "DTO/tag.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Requests.Tags";

message GetAllTagsRequestProto {}

message GetTagByIdRequestProto {
  string tag_id = 1;
  TraceDataProto traceData = 2;
}

message GetTagsByIdsRequestProto {
  repeated string tag_ids = 1;
  TraceDataProto traceData = 2;
}

message TagListProto {
  repeated TagProto tags = 1;
}

service TagProtoRequestService {
  rpc GetAllTags(GetAllTagsRequestProto) returns (TagListProto);
  rpc GetTagById(GetTagByIdRequestProto) returns (TagProto);
  rpc GetTagsByIds(GetTagsByIdsRequestProto) returns (TagListProto);
}
